--- a/.gitignore
+++ b/.gitignore
@@ -14,16 +14,4 @@ ___YT-DLP/*.webm
 ___YT-DLP/*.webp
 ___YT-DLP/*.zip
 ___YT-DLP/*.json
-/_LoopMedia
-/_ReverseMedia
-/_ReduceMediaDimensions
-/_ListedFilesInFolder
-/_ListSubFolders
-/_60to30FPS
-/_ScaleMedia
-/_ConvertOptimizedMedia
-/_TrimMedia
-/_ReduceFPS
-/_GenerateProxyMedia
-/_OptimizeMedia
-/_AdjustAudio
+/___FFMPEG
